# sdk-alif

./: .checkpatch.conf  .clang-format  .gitignore  CMakeLists.txt  CODEOWNERS  Jenkinsfile  Kconfig  README.md  compose.yaml  test_samples.groovy  west.yml
applications/bletestapp/: CMakeLists.txt  Kconfig  README.rst  app.overlay  lpuart.overlay  prj.conf
applications/bletestapp/boards/: alif_b1_pm.dtsi
applications/bletestapp/src/: appl_shell.c  appl_shell.h  ble_handler.c  ble_handler.h  main.c  power_defines.h  power_mgr.c  power_mgr.h  power_shell.c  power_shell.h
samples/aipl/benchmark/: CMakeLists.txt  Kconfig  README.rst  custom_linker.ld  prj.conf  sample.yaml
samples/aipl/benchmark/boards/: alif_e7_dk_rtss_hp.overlay  alif_utimer.overlay
samples/aipl/benchmark/lib/: aipl_config.h
samples/aipl/benchmark/src/: benchmark.c  benchmark.h  main.c
samples/aipl/examples/: CMakeLists.txt  Kconfig  README.rst  prj.conf  sample.yaml
samples/aipl/examples/assets/: assets.h  sample_photo_argb1555.c  sample_photo_argb8888.c
samples/aipl/examples/boards/: alif_dave2d.overlay  alif_e7_dk_ae722f80f55d5xx_rtss_hp.overlay  alif_e7_dk_rtss_he.conf  alif_e7_dk_rtss_he.overlay  alif_e8_dk_ae822fa0e5597xx0_rtss_he.overlay  alif_serial_display.overlay  common.overlay
samples/aipl/examples/src/: main.c
samples/bluetooth/le_periph_cgms/: CMakeLists.txt  Kconfig  README.md  README.rst  prj.conf
samples/bluetooth/le_periph_cgms/boards/: alif_b1_dk_ab1c1f4m51820ph0_rtss_he.overlay
samples/bluetooth/le_periph_cgms/inc/: cgms_app.h
samples/bluetooth/le_periph_cgms/src/: cgms_rom_1_0.c  cgms_rom_1_2.c  main.c
samples/bluetooth/le_periph_mics/: CMakeLists.txt  prj.conf
samples/bluetooth/le_periph_mics/boards/: lpgpio.overlay
samples/bluetooth/le_periph_mics/src/: main.c
samples/bluetooth/le_periph_plxp/: CMakeLists.txt  Kconfig  README.rst  prj.conf  test_button.overlay
samples/bluetooth/le_periph_plxp/src/: main.c
samples/drivers/display/: CMakeLists.txt  README.rst
samples/drivers/display/boards/: alif_b1_dk_ab1c1f4m51820ph0_rtss_he.overlay  alif_b1_dk_rtss_he_a5.overlay  alif_serial_display.overlay  serial_display_1lane.overlay  serial_display_2lane.overlay
samples/drivers/display/src/: alif_ensemble_main.c  main.c
samples/drivers/dma_scatter_gather/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
samples/drivers/dma_scatter_gather/src/: main.c
samples/drivers/ipm/ipm_arm_mhu_doorbell/: CMakeLists.txt  Kconfig  README.rst  linux_mpu_test_he_hp.json  lpm_shared_sram1.overlay  lpuart.overlay  prj.conf  sample.yaml
samples/drivers/ipm/ipm_arm_mhuv2/: CMakeLists.txt  Kconfig  README.rst  sample.yaml
samples/drivers/jpeg/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
samples/drivers/jpeg/src/: incbin.c  main.c
samples/modules/executorch/kws_ethosu/: CMakeLists.txt  Kconfig  README.rst  prj.conf  sample.yaml
samples/modules/lvgl/benchmark/: CMakeLists.txt  README.rst  lvgl_sram.ld  prj.conf  sample.yaml
samples/modules/tflite-micro/alif_asr/: CMakeLists.txt  Kconfig  prj.conf  readme.rst  sleep.overlay
samples/modules/tflite-micro/alif_img_class/: CMakeLists.txt  README.md  isp.conf  prj.conf  serial_camera.overlay  serial_camera_arx3a0.overlay  serial_camera_ov5675_selfie.overlay
samples/modules/tflite-micro/alif_kws/: CMakeLists.txt  Kconfig  prj.conf  readme.rst
samples/modules/tflite-micro/alif_object_detection/: CMakeLists.txt  Kconfig  README.md  isp.conf  ov5675.conf  prj.conf  serial_camera_arx3a0.overlay  serial_camera_arx3a0_selfie.overlay  serial_camera_isp.overlay  serial_camera_ov5675_selfie.overlay
samples/modules/tflite-micro/tflm_ethosu/: CMakeLists.txt  Kconfig  README.rst  custom_linker.ld  linker.ld  prj.conf
samples/sensor/ch201/: CMakeLists.txt  Kconfig  README.rst  prj.conf  sample.yaml
samples/sensor/ch201/ch201_lib/: LICENSE.txt  MODIFICATIONS.txt  ch201_bsp.c  ch201_bsp.h  chirp_board_config.h
samples/sensor/ch201/src/: main.c
subsys/modules/testcommands/shell/: CMakeLists.txt  Kconfig
tests/drivers/cmp/: CMakeLists.txt  Kconfig  README.rst  prj.conf  testcase.yaml
tests/drivers/cmp/boards/: alif_cmp1.overlay  alif_cmp1_ft1.overlay  alif_cmp1_ft2.overlay  alif_cmp1_ft4.overlay  alif_cmp1_polarity.overlay  alif_cmp1_spark.overlay  alif_hys12.overlay  alif_hys18.overlay  alif_hys24.overlay  alif_hys30.overlay  alif_hys36.overlay  alif_hys6.overlay  alif_ref_dac6.overlay  alif_ref_ext.overlay  alif_ref_vref.overlay
tests/drivers/cmp/src/: main.c  test_cmp.h  test_cmp_basic.c  test_cmp_feature_ext.c  test_cmp_filter.c  test_cmp_negative.c  test_cmp_output.c  test_cmp_polarity.c  test_cmp_reference.c  test_cmp_response_time.c  test_cmp_trigger.c
tests/drivers/crc/: CMakeLists.txt  Kconfig  README.rst  prj.conf  testcase.yaml
tests/drivers/crc/boards/: crc0.overlay  crc0_16_bit.overlay  crc0_32_bit.overlay  crc0_8_bit.overlay  crc1.overlay  crc1_16_bit.overlay  crc1_32_bit.overlay  crc1_8_bit.overlay
tests/drivers/crc/src/: main.c  software_crc.c  software_crc.h  test_crc_16.c  test_crc_16_alt.c  test_crc_32.c  test_crc_32_custom.c  test_crc_32c.c  test_crc_8.c  test_crc_common.h  test_crc_stress.c
tests/drivers/flash/spi_flash/: CMakeLists.txt  Kconfig  README.rst  prj.conf  testcase.yaml
tests/drivers/i2c/: CMakeLists.txt  Kconfig  README.rst  prj.conf  testcase.yaml
tests/drivers/i2c/boards/: i2c.overlay  i2c_bme680.overlay  i2c_swap.overlay  lpi2c.overlay  lpi2c_dw.conf
tests/drivers/i2c/src/: test_i2c.c  test_i2c.h  test_i2c_bme680.c  test_i2c_boundary.c  test_i2c_sensor.c  (+6 more)
tests/drivers/i2s/: CMakeLists.txt  Kconfig  README.rst  prj.conf  testcase.yaml
tests/drivers/i3c/: CMakeLists.txt  Kconfig  README.rst  prj.conf  testcase.yaml
tests/drivers/jpeg/: CMakeLists.txt  README.rst  app.overlay  prj.conf  testcase.yaml
tests/drivers/lptimer/: CMakeLists.txt  Kconfig  README.rst  prj.conf  testcase.yaml
tests/drivers/spi/: CMakeLists.txt  Kconfig  README.rst  prj.conf  testcase.yaml
tests/drivers/uart/: CMakeLists.txt  Kconfig  README.rst  dma.conf  prj.conf  testcase.yaml
(+1756 files in other folders)
